add social-media links in footer

--- a/netmanga_website/netmanga_website/templates/footernav.html
+++ b/netmanga_website/netmanga_website/templates/footernav.html
@@ -1,24 +1,35 @@
 {% load static %}
-<!--
-<div class="container">
+
+<div class="social-media-container row">
+    <div class="social-media-link-box">
+        <a class="social-media-link" href="https://www.facebook.com/netmangaofficial" target="_blank">
+            <i class="fab fa-facebook"></i>
+        </a>
+    </div>
+
+    <div class="social-media-link-box">
+        <a class="social-media-link" href="https://www.instagram.com/netmangaofficial/" target="_blank">
+            <i class="fab fa-instagram"></i>
+        </a>
+    </div>
+    <div class="social-media-link-box">
+        <a class="social-media-link" href="https://twitter.com/NetMangaOffic" target="_blank">
+            <i class="fab fa-twitter"></i>
+        </a>
+    </div>
+    <div class="social-media-link-box">
+        <a class="social-media-link" href="https://www.youtube.com/channel/UCZYp6NMYo9WJxB5fpd4K0sw" target="_blank">
+            <i class="fab fa-youtube"></i>
+        </a>
+    </div>
+    <div class="social-media-link-box">
+        <a class="social-media-link" href="https://www.tiktok.com/@netmanga" target="_blank">
+            <i class="fab fa-tiktok"></i>
+        </a>
+    </div>
     
-    <a class="social-media-link" href="">
-        <i class="fa fa-facebook"></i>
-    </a>
-    <i class="fa fa-facebook"></i>
-    <a class="social-media-link" href="">
-        <i class="fa fa-instagram"></i>
-    </a>
-
-    <a class="social-media-link" href="">
-        <i class="fa fa-twitter"></i>
-    </a>
-
-    <a class="social-media-link" href="">
-        <i class="fa fa-youtube"></i>
-    </a>
 </div>
--->
+
 <div class="container">
     <a class="footer-link" href="{% url 'public:about' %}">About</a>
     <a class="footer-link" href="{% url 'help:help' %}">Help</a>
