--- a/netmanga_website/netmanga_website/templates/index.html
+++ b/netmanga_website/netmanga_website/templates/index.html
@@ -27,7 +27,7 @@
     <div class="chart-view">
         <div>
             <section class="manga-section loaded">
-                <h1>Recent Uploads</h1>
+                <h1>Manga Series</h1>
                 <div class="manga-list">
                     {% for manga in mangas %}
                     <div class="manga-card">
@@ -54,7 +54,7 @@
     <div class="chart-view">
         <div>
             <section class="manga-section loaded">
-                <h1>Recenty Uploaded One-Shots</h1>
+                <h1>One-Shots</h1>
                 <div class="manga-list">
                     {% for oneshot in oneshots %}
                         <div class="manga-card">
