make new title for pages

--- a/netmanga_website/netmanga_website/templates/accounts/analytics.html
+++ b/netmanga_website/netmanga_website/templates/accounts/analytics.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Analytics :: NETMANGA {% endblock %}
+{% block title %} Analytics - NetManga {% endblock %}
 
 <script>
 var endpoint = 'api/data/'
