--- a/netmanga_website/netmanga_website/templates/accounts/edit_oneshot_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/edit_oneshot_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Manga :: NETMANGA {% endblock %}
+{% block title %} Edit Oneshot - NetManga {% endblock %}
 
 {% block content %}
 <br />
