--- a/netmanga_website/netmanga_website/templates/accounts/new_chapter_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/new_chapter_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Chapter :: NETMANGA {% endblock %}
+{% block title %} New Chapter - NetManga {% endblock %}
 
 {% block content %}
 <br />
