--- a/netmanga_website/netmanga_website/templates/accounts/withdraw_order.html
+++ b/netmanga_website/netmanga_website/templates/accounts/withdraw_order.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Withdraw History :: NETMANGA {% endblock %}
+{% block title %} Withdraw History - NetManga {% endblock %}
 
 {% block content %}
     {% if withdraw_order_infos %}
