--- a/netmanga_website/netmanga_website/templates/footer/about.html
+++ b/netmanga_website/netmanga_website/templates/footer/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} About | NETMANGA {% endblock %}
+{% block title %} About | Netmanga {% endblock %}
 
 {% block content %}
 <div class="container">
