--- a/netmanga_website/netmanga_website/templates/footer/help.html
+++ b/netmanga_website/netmanga_website/templates/footer/help.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Help | NETMANGA {% endblock %}
+{% block title %} Help | NetManga {% endblock %}
 
 {% block content %}
 
