--- a/netmanga_website/netmanga_website/templates/footer/privacy_policy.html
+++ b/netmanga_website/netmanga_website/templates/footer/privacy_policy.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Personal Data | NETMANGA {% endblock %}
+{% block title %} Personal Data | NetManga {% endblock %}
 
 {% block content %}
 <div class="container">
