--- a/netmanga_website/netmanga_website/templates/genre.html
+++ b/netmanga_website/netmanga_website/templates/genre.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Manga Genre {% endblock %}
+{% block title %} Genre - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
