--- a/netmanga_website/netmanga_website/templates/genre/action.html
+++ b/netmanga_website/netmanga_website/templates/genre/action.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Action Mangas {% endblock %}
+{% block title %} Action Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
