--- a/netmanga_website/netmanga_website/templates/genre/comedy.html
+++ b/netmanga_website/netmanga_website/templates/genre/comedy.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Comedy Mangas {% endblock %}
+{% block title %} Comedy Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
