--- a/netmanga_website/netmanga_website/templates/genre/drama.html
+++ b/netmanga_website/netmanga_website/templates/genre/drama.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Drama Mangas {% endblock %}
+{% block title %} Drama Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
