--- a/netmanga_website/netmanga_website/templates/genre/heartwarming.html
+++ b/netmanga_website/netmanga_website/templates/genre/heartwarming.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Heartwarming Mangas {% endblock %}
+{% block title %} Heartwarming Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
