--- a/netmanga_website/netmanga_website/templates/genre/historical.html
+++ b/netmanga_website/netmanga_website/templates/genre/historical.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Historical Mangas {% endblock %}
+{% block title %} Historical Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
