--- a/netmanga_website/netmanga_website/templates/genre/horror.html
+++ b/netmanga_website/netmanga_website/templates/genre/horror.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Horror Mangas {% endblock %}
+{% block title %} Horror Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
