--- a/netmanga_website/netmanga_website/templates/genre/informative.html
+++ b/netmanga_website/netmanga_website/templates/genre/informative.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Informative Mangas {% endblock %}
+{% block title %} Informative Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
