--- a/netmanga_website/netmanga_website/templates/genre/romance.html
+++ b/netmanga_website/netmanga_website/templates/genre/romance.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Romance Mangas {% endblock %}
+{% block title %} Romance Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
