--- a/netmanga_website/netmanga_website/templates/genre/sci-fi.html
+++ b/netmanga_website/netmanga_website/templates/genre/sci-fi.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Sci-Fi Mangas {% endblock %}
+{% block title %} Sci-Fi Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
