--- a/netmanga_website/netmanga_website/templates/genre/slice_of_life.html
+++ b/netmanga_website/netmanga_website/templates/genre/slice_of_life.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Slice of Life Mangas {% endblock %}
+{% block title %} Slice of Life Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
