--- a/netmanga_website/netmanga_website/templates/genre/sports.html
+++ b/netmanga_website/netmanga_website/templates/genre/sports.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Sports Mangas {% endblock %}
+{% block title %} Sports Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
