--- a/netmanga_website/netmanga_website/templates/genre/superhero.html
+++ b/netmanga_website/netmanga_website/templates/genre/superhero.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Superhero Mangas {% endblock %}
+{% block title %} Superhero Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
