--- a/netmanga_website/netmanga_website/templates/genre/thriller.html
+++ b/netmanga_website/netmanga_website/templates/genre/thriller.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Thriller Mangas {% endblock %}
+{% block title %} Thriller Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
