--- a/netmanga_website/netmanga_website/templates/oneshot_viewer.html
+++ b/netmanga_website/netmanga_website/templates/oneshot_viewer.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load custom_template_tags %}
 
-{% block title %} NETMANGA - {{oneshot.title}} {% endblock %}
+{% block title %} {{oneshot.title}} - NetManga {% endblock %}
 
 
 {% block content %}
