--- a/netmanga_website/netmanga_website/templates/accounts/creator_terms.html
+++ b/netmanga_website/netmanga_website/templates/accounts/creator_terms.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Terms of use :: NETMANGA {% endblock %}
+{% block title %} Creator Terms Of Use - NetManga {% endblock %}
 
 {% block content %}
 <div class="container">
