--- a/netmanga_website/netmanga_website/templates/accounts/new_manga_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/new_manga_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Manga : : NETMANGA {% endblock %}
+{% block title %} New Manga - NetManga {% endblock %}
 
 {% block content %}
 <br />
