--- a/netmanga_website/netmanga_website/templates/accounts/new_oneshot_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/new_oneshot_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Manga : : NETMANGA {% endblock %}
+{% block title %} New One-Shot - NetManga {% endblock %}
 
 {% block content %}
 <br />
