--- a/netmanga_website/netmanga_website/templates/accounts/signup.html
+++ b/netmanga_website/netmanga_website/templates/accounts/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Sign Up :: NETMANGA {% endblock %}
+{% block title %} Sign Up :: NetManga {% endblock %}
 
 {% block content %}
 <br />
