--- a/netmanga_website/netmanga_website/templates/accounts/upload.html
+++ b/netmanga_website/netmanga_website/templates/accounts/upload.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Upload :: NETMANGA {% endblock %}
+{% block title %} Upload - NetManga {% endblock %}
 
 {% block content %}
 <!--
