--- a/netmanga_website/netmanga_website/templates/base.html
+++ b/netmanga_website/netmanga_website/templates/base.html
@@ -14,7 +14,7 @@
         <!-- main.css -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
         
-        <title>{% block title %} NETMANGA - Read Mangas and Comics Online {% endblock %}</title>
+        <title>{% block title %} Read Mangas and Comics Online - NetManga {% endblock %}</title>
     </head>
     <body>
         <!--Chart js-->
