--- a/netmanga_website/netmanga_website/templates/footer/user_terms.html
+++ b/netmanga_website/netmanga_website/templates/footer/user_terms.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Terms of use | NETMANGA {% endblock %}
+{% block title %} Terms of use | NetManga {% endblock %}
 
 {% block content %}
 <div class="container">
