--- a/netmanga_website/netmanga_website/templates/genre/fantasy.html
+++ b/netmanga_website/netmanga_website/templates/genre/fantasy.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Fantasy Mangas {% endblock %}
+{% block title %} Fantasy Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
