--- a/netmanga_website/netmanga_website/templates/genre/supernatural.html
+++ b/netmanga_website/netmanga_website/templates/genre/supernatural.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Supernatural Mangas {% endblock %}
+{% block title %} Supernatural Mangas - NetManga {% endblock %}
 
 {% block content %}
 {% include 'genrenav.html' %}
