--- a/netmanga_website/netmanga_website/templates/popular.html
+++ b/netmanga_website/netmanga_website/templates/popular.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} NETMANGA - Popular Mangas {% endblock %}
+{% block title %} Popular Mangas - NetManga {% endblock %}
 
 {% block content %}
 <div class="main-content">
