--- a/netmanga_website/netmanga_website/templates/viewer_base.html
+++ b/netmanga_website/netmanga_website/templates/viewer_base.html
@@ -15,7 +15,7 @@
         <!-- main.css -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
         
-        <title></title>
+        <title>{% block title %}{% endblock %}</title>
         
     </head>
     <body>
