--- a/netmanga_website/netmanga_website/templates/accounts/edit_chapter_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/edit_chapter_form.html
@@ -55,7 +55,7 @@
                                     or drag the image files here.
                                 </p>
                                 {% for chapterimage in chapterimages %}
-                                    <img src={{chapterimage.image.url}} alt="Warum?" class="uploaded-manga-pages">
+                                    <img src={{chapterimage.image.url}} alt="Chapter Page" class="uploaded-manga-pages">
                                 {% endfor %}
                             </div>
                         </div>
