--- a/netmanga_website/netmanga_website/templates/accounts/edit_manga_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/edit_manga_form.html
@@ -29,7 +29,7 @@
                                 </div>
                                 <div class="browse-button browse-applied" id="coverPictureBrowseButton">
                                     <div class="after">
-                                        <img id="coverpicturepreview" src={{cover_picture.url}} alt="Warum?">
+                                        <img id="coverpicturepreview" src={{cover_picture.url}} alt="Manga Series Cover Picture">
                                         <i class="fa fa-arrow-circle-up"></i>
                                         <p class="placeholder_message">
                                             Select an image to upload
