--- a/netmanga_website/netmanga_website/templates/accounts/edit_oneshot_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/edit_oneshot_form.html
@@ -29,7 +29,7 @@
                                 </div>
                                 <div class="browse-button browse-applied" id="coverPictureBrowseButton">
                                     <div class="after">
-                                        <img id="coverpicturepreview" src={{cover_picture.url}} alt="Warum?">
+                                        <img id="coverpicturepreview" src={{cover_picture.url}} alt="One-Shot Cover Picture">
                                         <i class="fa fa-arrow-circle-up"></i>
                                         <p class="placeholder_message">
                                             Select an image to upload
@@ -107,7 +107,7 @@
                                     or drag the image files here.
                                 </p>
                                 {% for oneshotimage in oneshotimages %}
-                                    <img class="uploaded-manga-pages" src={{oneshotimage.image.url}} alt="Warum?">
+                                    <img class="uploaded-manga-pages" src={{oneshotimage.image.url}} alt="One-Shot Page">
                                 {% endfor %} 
                             </div>
                         </div>
