--- a/netmanga_website/netmanga_website/templates/accounts/new_oneshot_form.html
+++ b/netmanga_website/netmanga_website/templates/accounts/new_oneshot_form.html
@@ -29,7 +29,7 @@
                                 </div>
                                 <div class="browse-button browse-applied" id="coverPictureBrowseButton">
                                     <div class="before">
-                                        <img id="coverpicturepreview" src="" alt="Warum?">
+                                        <img id="coverpicturepreview" src="" alt="One-Shot Cover Picture">
                                         <i class="fa fa-arrow-circle-up"></i>
                                         <p class="placeholder_message">
                                             Select an image to upload
