--- a/netmanga_website/netmanga_website/templates/footernav.html
+++ b/netmanga_website/netmanga_website/templates/footernav.html
@@ -39,5 +39,5 @@
     </br>
     <p class="copyright">Copyright © NETMANGA</p>  
     <br/>
-    <img src="{% static 'img/netmanga_logo.png' %}" class="footer-logo"> 
+    <img src="{% static 'img/netmanga_logo.png' %}" alt="NetManga Logo" class="footer-logo"> 
 </div>
