--- a/netmanga_website/netmanga_website/templates/index.html
+++ b/netmanga_website/netmanga_website/templates/index.html
@@ -33,7 +33,7 @@
                     <div class="manga-card">
                         <a class="cover" rel="noopener noreferrer" href="{% url 'public:chapterlist' pk=manga.pk %}">
                             <div class="background-color"></div>
-                            <img class="manga-image loaded" src="{{manga.cover_picture.url}}">
+                            <img class="manga-image loaded" src="{{manga.cover_picture.url}}" alt="{{manga.title}} Cover Picture">
                         
                             <div class="overlay">
                                 <!--<a href="" class="title">{{manga.title}}</a>-->
@@ -60,7 +60,7 @@
                         <div class="manga-card">
                             <a class="cover" rel="noopener noreferrer" href="{% url 'public:oneshot_viewer' pk=oneshot.pk %}">
                                 <div class="background-color"></div>
-                                <img class="manga-image loaded" src="{{oneshot.cover_picture.url}}">
+                                <img class="manga-image loaded" src="{{oneshot.cover_picture.url}}" alt="{{oneshot.title}} Cover Picture">
                             
                                 <div class="overlay">
                                     <!--<a href="" class="title">{{manga.title}}</a>-->
@@ -90,7 +90,7 @@
                     <div class="manga-card">
                         <a class="cover" rel="noopener noreferrer" href="{% url 'public:chapterlist' pk=manga.pk %}">
                             <div class="background-color"></div>
-                            <img class="manga-image loaded" src="{{manga.cover_picture.url}}">
+                            <img class="manga-image loaded" src="{{manga.cover_picture.url}}" alt="{{manga.title}} Cover Picture">
                         
                             <div class="overlay">
                                 <!--<a href="" class="title">{{manga.title}}</a>-->
