--- a/netmanga_website/netmanga_website/templates/navbar.html
+++ b/netmanga_website/netmanga_website/templates/navbar.html
@@ -30,7 +30,7 @@
         <div class="mx-auto order-0">
             <!--Logo and Homepage Nav-->
             <a class="navbar-brand mx-auto" href="{% url 'public:index' %}">
-                <img src="{% static 'img/netmanga_logo.png' %}" width="220" height="80" class="">
+                <img src="{% static 'img/netmanga_logo.png' %}" alt="NetManga Logo" width="220" height="80" class="">
             </a>
         </div>
         <!--Search Engine and Profile/Login-->
@@ -53,7 +53,7 @@
 
                         <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="{{request.user.profile.profile_picture.url}}" width="45" height="45" class="rounded-circle uploaded">
+                            <img src="{{request.user.profile.profile_picture.url}}" alt="My Profile Picture" width="45" height="45" class="rounded-circle uploaded">
                         </button>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="{{ profile_url }}">Profile</a>
