--- a/netmanga_website/netmanga_website/templates/accounts/profile.html
+++ b/netmanga_website/netmanga_website/templates/accounts/profile.html
@@ -18,7 +18,7 @@
         
         {% if profile %}
             
-            <img src="{{profile.profile_picture.url}}" height=130 width=130 class="rounded-circle uploaded">
+            <img src="{{profile.profile_picture.url}}" height=130 width=130 class="rounded-circle uploaded" alt="Profile Picture">
                 
                 {% if profile.is_full_name_displayed %}
                 <h1>
@@ -55,7 +55,7 @@
                             <div class="manga-card">
                                 <a class="cover" rel="noopener noreferrer" href="{% url 'public:chapterlist' pk=created_manga.manga.pk %}">
                                     <div class="background-color"></div>
-                                    <img class="manga-image loaded" src="{{created_manga.manga.cover_picture.url}}">
+                                    <img class="manga-image loaded" src="{{created_manga.manga.cover_picture.url}}" alt="{{created_manga.manga.title}}">
                                 
                                     <div class="overlay">
                                         <!--<a href="" class="title">{{manga.title}}</a>-->
@@ -111,7 +111,7 @@
                             </div>
                             <div class="browse-button browse-applied" id="profilePictureBrowseButton">
                                 <div class="after">
-                                    <img id="profilepicturepreview" src={{profile.profile_picture.url}} alt="Warum?">
+                                    <img id="profilepicturepreview" src={{profile.profile_picture.url}} alt="Profile Picture">
                                     <i class="fa fa-arrow-circle-up"></i>
                                     <p class="placeholder_message">
                                         Select an image to upload
