--- a/netmanga_website/netmanga_website/templates/base.html
+++ b/netmanga_website/netmanga_website/templates/base.html
@@ -24,7 +24,7 @@
         <div class="coins-view">
             <div class="buy-coins-link">
                 <a class="btn" href="{% url 'accounts:buy_coins'%}" target="_blank" >
-                    <img src="{% static 'img/netmanga_coin.png' %}" style="margin-bottom: 4px;" width="20" height="20"> 
+                    <img src="{% static 'img/netmanga_coin.png' %}" alt="NetManga Coin" style="margin-bottom: 4px;" width="20" height="20"> 
                     <h6 class="dropdown-coins-amount">
                     {% if user.profile.coins < 10000 %}
                     {{user.profile.coins}}
@@ -37,81 +37,9 @@
                     {% endif %}
                     </h6>
                 </a>
-                <!--
-                <div class="dropdown-menu dropdown-menu-end coin-offers" aria-labelledby="dropdownPaymentButton">
-                    {% for offer in coinoffers %}
-                        <div class="offer">
-                            <div class="coins-amount">
-                                <h6>{{ offer.amount }} Coins</h6>
-                            </div> 
-                            <div class="coins-price">
-                                <button class="btn-coins-price" id="id_buy-coins-{{forloop.counter}}">
-                                    {{ offer.price }}€
-                                </button>
-                                {% if offer.bonus > 0 %}
-                                <span class="offer-bonus">
-                                    {{offer.bonus}}% Bonus
-                                </span>
-                                {% endif %}
-                            </div>
-                        </div>
-                    {% endfor %}
-                </div>
-                -->
             </div>
         </div>
-        <!--
-        {% for offer in coinoffers %}
-        <div class="bg-payment-modal" id="payment-popup-{{forloop.counter}}">
-            <div class="modal-payment-content">
-                <div class="payment-info">
-                    <img class="coin-img" src={% static 'img/netmanga_coin.png' %} width="20" height="20">
-                    <div class="coins-amount-info">Buy {{offer.amount}} Coins!</div>
-                    <div class="coins-user-info">You are purchasing Coins for the user, {{user.username}}</div>
-                    <div class="payment-close">+</div>
-                </div>
-                <div class="payment-form-container">
-                    <form action="" class="payment-form"></form>
-                    <div class="purchasing-amount">Total: {{offer.price}}€</div>
-                    <div class="terms-agreement">
-                        By purchasing Coins and Awards you agree to the
-                        <a href="{% url 'public:user_terms' %}" target="_blank" rel="noopener noreferrer">NetManga User Agreement</a>
-                    </div>
-                </div>
-                <div class="payment-buttons">
-                    <div id="paypal-button-container"></div>
-                    <script src="https://www.paypal.com/sdk/js?client-id=ART4N5m85NSp7un1KrfvtNK9AOEiu3I6GxIYjHqNV4ogMFEQGAxUUMGUatGeBeYAJu-jrS15f62TD6g_&currency=USD"></script>
-                    <script>
-                        // Render the PayPal button into #paypal-button-container
-                        paypal.Buttons({
-                
-                            // Set up the transaction
-                            createOrder: function(data, actions) {
-                                return actions.order.create({
-                                    purchase_units: [{
-                                        amount: {
-                                            value: '88.44'
-                                        }
-                                    }]
-                                });
-                            },
-                
-                            // Finalize the transaction
-                            onApprove: function(data, actions) {
-                                return actions.order.capture().then(function(details) {
-                                    // Show a success message to the buyer
-                                    alert('Transaction completed by ' + details.payer.name.given_name + '!');
-                                });
-                            }
-                
-                
-                        }).render('#paypal-button-container');
-                    </script>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-        -->
+        
         {% endif %}
         <main>
             {% block content %}
@@ -121,12 +49,7 @@
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
         <!--JavaScript| Seperate Popper and Bootstrap JS-->
-        <!--
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-        -->
         <!-- JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!--script.js-->
