--- a/netmanga_website/netmanga_website/templates/oneshot_viewer.html
+++ b/netmanga_website/netmanga_website/templates/oneshot_viewer.html
@@ -17,7 +17,7 @@
         <div class=" w-100 order-1 order-sm-0">
             <!--Logo and Homepage Nav-->
             <a class="navbar-brand" href="{% url 'public:index' %}">
-                <img src="{% static 'img/netmanga_logo.png' %}" class="logo-nav">
+                <img src="{% static 'img/netmanga_logo.png' %}" alt="NetManga Logo" class="logo-nav">
             </a>
         </div>
 
@@ -63,7 +63,7 @@
                     <div class="page-card">
                         <div class="page-cover" rel="noopener noreferrer">
                             
-                            <img class="chapter-page loaded" src="{{ oneshotpage.image.url}} " id="manga-page" galleryimg="no" oncontextmenu="return false;">
+                            <img class="chapter-page loaded" src="{{ oneshotpage.image.url}} " alt="One-Shot Page" id="manga-page" galleryimg="no" oncontextmenu="return false;">
             
                         </div>
                     </div>
@@ -263,7 +263,7 @@
             <ul class="ratings">
                 <li>
                     <a href="{% url 'accounts:show_profile' pk=oneshot.creator.user.pk %}">
-                        <img class="creator-picture rounded-circle"  src="{{oneshot.creator.user.profile.profile_picture.url}}">
+                        <img class="creator-picture rounded-circle"  src="{{oneshot.creator.user.profile.profile_picture.url}}" alt="{{oneshot.creator.user.username}} Cover Picture">
                         <h5 class="creator-name"  style="float: right;">{{ oneshot.creator.user.username }}</h5>
                     </a>
                 </li>
@@ -288,7 +288,7 @@
         <div class="awards-info">
             <a class="coins-amount-view" target="_blank" href="{% url 'accounts:buy_coins' %}">
                 <i class="fa fa-plus-circle"></i>
-                <img class="awards-coin-img" src="{% static 'img/netmanga_coin.png' %}" width="20" height="20">
+                <img class="awards-coin-img" src="{% static 'img/netmanga_coin.png' %}" alt="NetManga Coin" width="20" height="20">
                 <h5>{{request.user.profile.coins}}</h5>
             </a>
             
@@ -303,7 +303,7 @@
                     <input type="radio" id="id_{{award.name|cut:' '|lower}}" name="award" value="{{award.name}}" required>
                     <label for="id_{{award.name|cut:' '|lower}}" class="award-card" id="label_{{award.name|cut:' '|lower}}">
                         <div class="award-img-box">
-                            <img src="{{ award.image.url }}" alt="" class="award-img loaded">
+                            <img src="{{ award.image.url }}" alt="award.name" class="award-img loaded">
                         </div>
                         <div class="award-label-box">
                             <div class="award-hidden-box">
@@ -315,7 +315,7 @@
                         <div class="award-label-price">
                             <div class="award-label-content-box">
                                 <div class="div award-price-body">
-                                    <img src="{% static 'img/netmanga_coin.png' %}" height="20" width="20">
+                                    <img src="{% static 'img/netmanga_coin.png' %}" alt="NetManga Coin" height="20" width="20">
                                     {{award.price}}
                                 </div>
                             </div>   
@@ -325,7 +325,7 @@
                     <input type="radio" id="id_{{award.name|cut:' '|lower}}" name="award" value="{{award.name}}" required>
                     <a class="award-card" id="label_{{award.name|cut:' '|lower}}_link" target="_blank" href="{% url 'accounts:buy_coins' %}">
                         <div class="award-img-box">
-                            <img src="{{ award.image.url }}" alt="" class="award-img loaded">
+                            <img src="{{ award.image.url }}" alt="{{award.name}}" class="award-img loaded">
                         </div>
                         <div class="award-label-box">
                             <div class="award-hidden-box">
@@ -337,7 +337,7 @@
                         <div class="award-label-price">
                             <div class="award-label-content-box">
                                 <div class="div award-price-body">
-                                    <img src="{% static 'img/netmanga_coin.png' %}" height="20" width="20">
+                                    <img src="{% static 'img/netmanga_coin.png' %}" alt="Netmanga Coin" height="20" width="20">
                                     {{award.price}}
                                 </div>
                             </div>   
@@ -398,9 +398,9 @@
         <ul class="comments">
             <li class="comment-form">
                 {% if user.is_authenticated %}
-                    <img class="comment-user rounded-circle uploaded" height=50 width=50 src="{{user.profile.profile_picture.url}}">
+                    <img class="comment-user rounded-circle uploaded" height=50 width=50 src="{{user.profile.profile_picture.url}}" alt="{{user.username}} Profile Picture">
                 {% else %}
-                    <img class="comment-user rounded-circle uploaded" height=50 width = 50 src="{% static 'img/no_profile_picture.png' %}">
+                    <img class="comment-user rounded-circle uploaded" height=50 width = 50 src="{% static 'img/no_profile_picture.png' %}" alt="No Profile Picture">
                 {% endif %}
                 <form id="comment" method="post">
                     {% csrf_token %}
@@ -415,7 +415,7 @@
             </li>
             {% for comment_info in comment_infos %}
             <li class="commentary">
-                <img class="comment-user rounded-circle uploaded" height=50 width = 50 src="{{comment_info.comment.user.profile.profile_picture.url}}">
+                <img class="comment-user rounded-circle uploaded" height=50 width = 50 src="{{comment_info.comment.user.profile.profile_picture.url}}" alt="{{comment_info.comment.user.username}} Profile Picture">
                 <small class="username">{{ comment_info.comment.user.username  }}</small>
                 <p class= "comment">{{ comment_info.comment.comment }}</p>
                 <div class="row">
