--- a/netmanga_website/netmanga_website/templates/search.html
+++ b/netmanga_website/netmanga_website/templates/search.html
@@ -21,7 +21,7 @@
                     <a href="{% url 'public:chapterlist' pk=manga_info.manga.pk %}" style="text-decoration: none;">
                         <div class="chapter-card">
                             <div class="chapter-cover" rel="noopener noreferrer">
-                                <img class="chapter-image loaded" src="{{ manga_info.manga.cover_picture.url }}">
+                                <img class="chapter-image loaded" src="{{ manga_info.manga.cover_picture.url }}" alt="{{ manga_info.manga.title}} Cover Picture">
                             </div>
                             <div class="manga-data">
                                 <div class="scroller vb vb-invisible">
@@ -61,7 +61,7 @@
                                 
                             <div class="chapter-cover" rel="noopener noreferrer">
                                 <div style="text-decoration: none;">
-                                    <img class="chapter-image loaded" src="{{ oneshot.cover_picture.url }}">
+                                    <img class="chapter-image loaded" src="{{ oneshot.cover_picture.url }}" alt="{{oneshot.title}} Cover Picture">
                                 </div>
                             </div>
                             <div class="manga-data">
@@ -106,7 +106,7 @@
                     <a href="{% url 'public:chapter_viewer' pk=chapter_info.chapter.pk %}" style="text-decoration: none;">
                         <div class="chapter-card">
                             <div class="chapter-cover" rel="noopener noreferrer">
-                                <img class="chapter-image loaded" src="{{ chapter_info.chapter.manga.cover_picture.url }}">
+                                <img class="chapter-image loaded" src="{{ chapter_info.chapter.manga.cover_picture.url }}" alt="{{ chapter_info.chapter.title}} Cover Picture">
                             </div>
                             <div class="data">
                                 <div class="scroller vb vb-invisible">
