add meta keywords and description

--- a/netmanga_website/netmanga_website/templates/viewer_base.html
+++ b/netmanga_website/netmanga_website/templates/viewer_base.html
@@ -6,6 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Upload Mangas, Comics, Manhwas and Webtoons to reach the whole NetManga Community.">
+        <meta name="keywords" content="netmanga, manga, mangas, anime, animes, upload mangas, read online mangas, manhwa, manhwas, netmangas, webtoon, webtoons, crunchyroll, tapas, mangaka, become a mangaka, voyceme">
         <!-- Favicon-->
         <link rel="icon" type="image/png" href="{% static 'img/netmanga_badge.png' %}">
         <!-- Bootstrap CSS -->
