add canonical url in base

--- a/netmanga_website/netmanga_website/templates/base.html
+++ b/netmanga_website/netmanga_website/templates/base.html
@@ -15,7 +15,7 @@
         <link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
         <!-- main.css -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
-        
+        <link rel="canonical" href="https://www.netmanga.com/">
         <title>{% block title %} Read Mangas and Comics Online - NetManga {% endblock %}</title>
     </head>
     <body>
