--- a/netmanga_website/netmanga_website/templates/accounts/upload.html
+++ b/netmanga_website/netmanga_website/templates/accounts/upload.html
@@ -35,7 +35,7 @@
                             
                             <div class="chapter-cover" rel="noopener noreferrer">
                                 <a href="{% url 'accounts:new_chapter_form' pk=manga_info.manga.pk %}" style="text-decoration: none;">
-                                    <img class="chapter-image loaded" src="{{ manga_info.manga.cover_picture.url }}" alt="{{manga_info.manga-title}} Cover Picture">
+                                    <img class="chapter-image loaded" src="{{ manga_info.manga.cover_picture.url }}" alt="{{manga_info.manga.title}} Cover Picture">
                                 </a>
                             </div>
                             <div class="manga-data">
