--- a/netmanga_website/netmanga_website/templates/viewer_base.html
+++ b/netmanga_website/netmanga_website/templates/viewer_base.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- main.css -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
-        <link rel="canonical" href="{{request.path}}">
+        <link rel="canonical" href="{{request.get_full_path}}">
         <title>{% block title %}{% endblock %}</title>
         
     </head>
