--- a/netmanga_website/netmanga_website/templates/footer/user_terms.html
+++ b/netmanga_website/netmanga_website/templates/footer/user_terms.html
@@ -36,7 +36,7 @@
         <p><strong>Third-party Social Media Service</strong> means any services or content (including data, information, products or services) provided by a third-party that may be displayed, included or made available by the Service.</p>
         </li>
         <li>
-        <p><strong>Website</strong> refers to NetManga, accessible from <a href="https://www.netmanga.com" rel="external nofollow noopener" target="_blank">https://www.netmanga.com</a></p>
+        <p><strong>Website</strong> refers to NetManga, accessible from <a href="https://www.netmanga.com" target="_blank">https://www.netmanga.com</a></p>
         </li>
         <li>
         <p><strong>You</strong> means the individual accessing or using the Service, or the company, or other legal entity on behalf of which such individual is accessing or using the Service, as applicable.</p>
