move chart.min-js link to analytics template

--- a/netmanga_website/netmanga_website/templates/accounts/analytics.html
+++ b/netmanga_website/netmanga_website/templates/accounts/analytics.html
@@ -21,15 +21,8 @@ $.ajax({
 </script>
 
 {% block content %}
-<!--
-<header class="masthead bg-primary text-white text-center">
-    <div class="container d-flex align-items-center flex-column">-->
-        <!-- Masthead Heading-->
-        <!--<h1 class="masthead-heading text-uppercase mb-0">PUBLISH YOUR MANGA</h1>-->
-        <!-- Masthead Subheading-->
-        <!--<p class="masthead-subheading font-weight-light mb-0">Be Creative</p>
-    </div>
-</header>-->
+<!--Chart js-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.1.1/chart.min.js" integrity="sha512-BqNYFBAzGfZDnIWSAEGZSD/QFKeVxms2dIBPfw11gZubWwKUjEgmFUtUls8vZ6xTRZN/jaXGHD/ZaxD9+fDo0A==" crossorigin="anonymous"></script>
 <!--Recommended Section-->
 <div class="analytics">
     <div class="analytics-content">
