--- a/netmanga_website/netmanga_website/templates/base.html
+++ b/netmanga_website/netmanga_website/templates/base.html
@@ -7,14 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Upload Mangas, Comics, Manhwas and Webtoons to reach the whole NetManga Community.  Read and explore new Mangas, Comics, Manhwas and Webtoons by creator on NetManga and support them.">
         <meta name="keywords" content="netmanga, manga, mangas, anime, animes, upload mangas, read online mangas, manhwa, manhwas, netmangas, webtoon, webtoons, crunchyroll, tapas, mangaka, become a mangaka, voyceme">
-        <!-- Favicon-->
+        <!-- Favicon -->
         <link rel="icon" type="image/png" href="{% static 'img/netmanga_badge.png' %}">
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <!-- icons -->
-        <link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
-        <!-- main.css -->
-        <link href="{% static 'css/main.css' %}" rel="stylesheet">
+        <!-- Cannonical -->
         <link rel="canonical" href="{{request.build_absolute_uri}}">
         <title>{% block title %} Read Mangas and Comics Online - NetManga {% endblock %}</title>
     </head>
@@ -47,6 +42,12 @@
             {% endblock %}
         </main>
 
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <!-- icons -->
+        <link href="{% static 'fontawesome_free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+        <!-- main.css -->
+        <link href="{% static 'css/main.css' %}" rel="stylesheet">
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
         <!--JavaScript| Seperate Popper and Bootstrap JS-->
