--- a/netmanga_website/netmanga_website/templates/base.html
+++ b/netmanga_website/netmanga_website/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load compress %}
 {% load custom_template_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -14,8 +15,10 @@
         <title>{% block title %} Read Mangas and Comics Online - NetManga {% endblock %}</title>
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        {% compress css %}
         <!-- main.css -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
+        {% endcompress %}
     </head>
     <body>
         {% include 'navbar.html' %}
@@ -53,10 +56,12 @@
         <!--JavaScript| Seperate Popper and Bootstrap JS-->
         <!-- JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        {% compress js %}
         <!--script.js-->
         <script src="{% static 'js/script.js' %}"></script>
         <!--cookie_consent.js-->
         <script src="{% static 'js/cookie_consent.js' %}"></script>
+        {% endcompress %}
     </body>
     <footer class="footer text-center bg-light">
         {% include 'footernav.html' %}
