--- a/netmanga_website/netmanga_website/templates/viewer_base.html
+++ b/netmanga_website/netmanga_website/templates/viewer_base.html
@@ -15,8 +15,10 @@
         <title>{% block title %}{% endblock %}</title>
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        {% compress css %}
         <!-- main.css -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
+        {% endcompress %}
     </head>
     <body>
         <main>
