test if compressing works in production

--- a/netmanga_website/netmanga_website/templates/base.html
+++ b/netmanga_website/netmanga_website/templates/base.html
@@ -19,6 +19,7 @@
         <!-- main.css -->
         <link href="{% static 'css/main.css' %}" rel="stylesheet">
         {% endcompress %}
+        <link href="{% static 'css/main.css' %}" rel="stylesheet">
     </head>
     <body>
         {% include 'navbar.html' %}
