update creator terms and create staff app

--- a/netmanga_website/netmanga_website/templates/footer/creator_terms.html
+++ b/netmanga_website/netmanga_website/templates/footer/creator_terms.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Feedback | NetManga {% endblock %}
+{% block title %} Creator Terms | NetManga {% endblock %}
 
 {% block content %}
 <div class="container">
@@ -50,7 +50,7 @@
         </br></br>
             We do not allow posting duplicate content, whether from a single account or across multiple accounts, either publicly or as an unlisted story.
         </br></br>
-            7. Terms Infringers: VoyceMe will promptly terminate without notice the accounts of users that are determined by VoyceMe to be “Terms Infringers.” A Terms Infringer is a user who has been notified of infringing activity or has had User Content removed from the Service at least twice. We strive to be fair, but we reserve the right to suspend accounts or remove content, without notice, for any reason, particularly to protect our services, infrastructure, users, or community. If you attempt to evade suspension by creating new accounts or posts, we will suspend your new accounts and posts.
+            7. Terms Infringers: NetManga will promptly terminate without notice the accounts of users that are determined by NetManga to be “Terms Infringers.” A Terms Infringer is a user who has been notified of infringing activity or has had User Content removed from the Service at least twice. We strive to be fair, but we reserve the right to suspend accounts or remove content, without notice, for any reason, particularly to protect our services, infrastructure, users, or community. If you attempt to evade suspension by creating new accounts or posts, we will suspend your new accounts and posts.
         </p>
         <h1>Monetization</h1>
         <p>
